corrected white space error

--- a/dev/scss/sections/_resume.scss
+++ b/dev/scss/sections/_resume.scss
@@ -8,8 +8,8 @@
     padding: 56px 24px;
     font-size: helpers.rem-calc(14);
     font-weight: 600;
-    width: 100%;
-    max-width: 100vw; // Prevents the section from exceeding the viewport width
+    // width: 100%;
+    // max-width: 100vw; // Prevents the section from exceeding the viewport width
     box-sizing: border-box;
     border: 1px solid var(--black);
     border-radius: 100px;
